--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "install-client": "npm install --prefix client",
+    "install-server": "npm install --prefix server",
+    "install": "npm run install-client && npm run install-server",
     "server": "npm run dev --prefix server",
     "client": "npm start --prefix client",
     "watch": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
