--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
   "author": "Ramiro",
   "license": "ISC",
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "testTimeout": 200000
   },
   "dependencies": {
     "axios": "^1.2.2",
